<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="22dp"
            android:visibility="gone" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:weightSum="4"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.7"
                android:background="@drawable/bgb"
                />

            <ScrollView
                android:layout_weight="2.6"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_centerInParent="true"
                android:layout_height="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="@color/white"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_gravity="center"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/imgLogo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            />

                    </LinearLayout>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/mobile_number"
                        android:textColor="@color/colorPrimary"
                        android:textSize="22sp" />

                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/we_will_send_you_a_one_time_password_on_your_phone_number"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/box_border"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_gravity="center"
                                app:srcCompat="@drawable/ic_mobile" />

                            <View
                                android:layout_width="1dp"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="2dp"
                                android:layout_marginRight="2dp"
                                android:background="@color/colorPrimary" />


                            <EditText
                                android:id="@+id/edtMobile"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@null"
                                android:inputType="number"
                                android:imeOptions="actionDone"
                                android:textCursorDrawable="@drawable/cursor"
                                android:lineSpacingMultiplier="1.2"
                                android:ems="10"
                                android:maxLength="10"
                                android:hint="@string/mobile_number_s"
                                android:textColor="@color/colorPrimary" />
                        </LinearLayout>

                    </LinearLayout>



                    <Button
                        android:id="@+id/btnProceed"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/btn_blue_border"
                        android:elevation="2dp"
                        android:text="@string/proceed"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>
            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.7"
                android:background="@drawable/oppwave"
                />

        </LinearLayout>

        <com.tuyenmonkey.mkloader.MKLoader
            android:id="@+id/loader"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:mk_color="@color/darkBlue"
            android:layout_centerInParent="true"
            android:visibility="gone"
            app:mk_type="LineSpinner" />



    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>