<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:visibility="gone" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:weightSum="4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.7"
                android:background="@drawable/bgb" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="2.6">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:background="@color/white"
                        android:orientation="vertical">


                        <LinearLayout
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_gravity="center"
                            android:background="@drawable/circle_blue_bg"
                            android:gravity="center">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="110dp"
                                android:layout_height="110dp"
                                android:elevation="10dp"
                                android:layout_gravity="center"
                                android:background="@drawable/logo" />

                        </LinearLayout>


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:text="Company Code"
                            android:textColor="@color/colorPrimary"
                            android:textSize="22sp" />

                        <TextView
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:text="@string/to_get_started_enter_your_company_code"
                            android:textColor="@color/colorPrimary"
                            android:textSize="15sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="30dp"
                            android:layout_marginRight="20dp"
                            android:background="@drawable/box_border"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">

                                <androidx.appcompat.widget.AppCompatImageView
                                    android:layout_width="25dp"
                                    android:layout_height="25dp"
                                    android:layout_gravity="center"
                                    app:srcCompat="@drawable/ic_company_code" />

                                <View
                                    android:layout_width="1dp"
                                    android:layout_height="match_parent"
                                    android:layout_marginLeft="2dp"
                                    android:layout_marginRight="2dp"
                                    android:background="@color/colorPrimary" />


                                <androidx.appcompat.widget.AppCompatEditText
                                    android:id="@+id/edtCode"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@null"
                                    android:ems="10"
                                    android:imeOptions="actionDone"
                                    android:textCursorDrawable="@drawable/cursor"
                                    android:hint="@string/company_code"
                                    android:textColor="@color/colorPrimary"
                                   />
                            </LinearLayout>

                        </LinearLayout>


                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btnVerify"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginRight="20dp"
                            android:background="@drawable/btn_blue_border"
                            android:text="@string/verify"
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                    </LinearLayout>

                </LinearLayout>

            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.7"
                android:background="@drawable/oppwave" />

        </LinearLayout>

        <com.tuyenmonkey.mkloader.MKLoader
            android:id="@+id/loader"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:mk_color="@color/darkBlue"
            android:layout_centerInParent="true"
            android:visibility="gone"
            app:mk_type="LineSpinner" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>